[Win][HighDPI] Video window placement is incorrect. https://bugs.webkit.org/show_bug.cgi?id=148954

Reviewed by Alex Christensen.

We need to scale window dimensions with device scale factor.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::setSize):


Canonical link: https://commits.webkit.org/167052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189498 268f45cc-cd09-0410-ab3c-d52691b4dbfc